--- a/history.css
+++ b/history.css
@@ -480,37 +480,4 @@ body {
         display: block;
     }
 }
-/*&$*$*'ламлалакдппщдададс*/
-
-@media (max-width:190px) {
-    ._mainBlock {
-        min-width: 600px;
-    }
-    .game {
-        font-size: 55px;
-    }
-    .imagesOfMan {
-        margin-left: 0px;
-    }
-    .contact {
-        width: 85px;
-        height: 85px;
-    }
-    .game {
-        height: 15%;
-    }
-    .game2 {
-        height: 5px;
-        font-size: 60px;
-    }
-    menuNavElement7 {
-        display: none;
-    }
-    .phoneNav {
-        min-width: 600px;
-    }
-    .metaBlock2 {
-        margin-top: 2850px;
-        
-    }
-}
+/*&$*$*'ламллакдппщдададс*/
