--- a/history.css
+++ b/history.css
@@ -479,6 +479,9 @@ body {
     .menuNavElementBurger {
         display: block;
     }
+    .metaBlock2 { 
+        margin-top: 3050px; 
+    }
 }
 /*&$*$*'ламллакдппщдададс*/
 
